Instead of the database being a thread, we create a new session per thread. also now the admin can create a restaurant

--- a/src/ui/template/restaurant.html
+++ b/src/ui/template/restaurant.html
@@ -1,5 +1,14 @@
 <html>
 <body>
 <h1>{{ restaurant.name }}</h1>
+
+    {% if user.admin %}
+        General Manager: {{ restaurant.gm }}
+    {% endif %}
+
+    {% if user.id == restaurant.gm_id %}
+        Welcome, GM
+    {% endif %}
+
 </body>
 </html>
