--- a/src/ui/template/index.html
+++ b/src/ui/template/index.html
@@ -16,7 +16,7 @@
             size=25
             title="your password"
             requred />
-    <input type="submit"/>
+    <input type="submit" value="login"/>
 </form>
 </body>
 </html>
