--- a/src/ui/template/welcome.html
+++ b/src/ui/template/welcome.html
@@ -14,7 +14,7 @@
                     size=25
                     title="The Restaurant Name"
                     requred autofocus />
-            <input type="submit"/>
+            <input type="submit" value="create"/>
         </form>
 
         <h2>Users</h2>
