--- a/src/ui/template/welcome.html
+++ b/src/ui/template/welcome.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h1>Welcome {{ user.name }}</h1>
-
+    <a href="/logout">logout</a>
     {% if user.admin %}
         Hey, admin.
 
