Now we are using restaurant instead of gm in a few fields and fixing empty roles being created

--- a/src/ui/template/restaurant.html
+++ b/src/ui/template/restaurant.html
@@ -37,6 +37,7 @@
                     placeholder="Role"
                     size=10
                     title="Name of the role"
+                    pattern=".{3,}"
                     requred autofocus />
             <input type="submit" value="add"/>
         </form>
