Now users can change their role priority

--- a/src/ui/template/welcome.html
+++ b/src/ui/template/welcome.html
@@ -2,6 +2,7 @@
 <body>
 <h1>Welcome {{ user.name }}</h1>
     <a href="/logout">logout</a><br/>
+
     {% if user.admin %}
         Hey, admin.
 
@@ -41,17 +42,31 @@
     {% endfor %}
     </ul>
 
-    <ul>
-    {% for restaurant in user_restaurants %}
-        <li><a href="/restaurant/{{ restaurant.id }}">{{ restaurant.name }}</a></li>
+    {% if sorted_roles %}
+    <form action="/set_role_priority" method="POST">
         <ul>
-            {% for role in sorted_roles %}
-                {% if role.role.restaurant_id == restaurant.id %}
-                    <li>{{ role.role.name }}</li>
-                {% endif %}
-            {% endfor %}
+        {% for restaurant in user_restaurants %}
+            <li><a href="/restaurant/{{ restaurant.id }}">{{ restaurant.name }}</a></li>
+            <ul>
+                {% for role in sorted_roles %}
+                    {% if role.role.restaurant_id == restaurant.id %}
+                        <li>
+                            {{ role.role.name }}
+                            <input type="number"
+                                name="{{ role.id }}_priority"
+                                value="{{ role.priority }}"
+                                min=1
+                                max=100
+                                step=1/>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        {% endfor %}
         </ul>
-    {% endfor %}
-    </ul>
+        <input type="submit" value="change role priority"/>
+    </form>
+    {% endif %}
+
 </body>
 </html>
