--- a/src/ui/template/restaurant.html
+++ b/src/ui/template/restaurant.html
@@ -3,6 +3,7 @@
 <h1>{{ restaurant.name }}</h1>
 
     {% if user.admin %}
+<!--  ==================== Admin ====================  -->
 
         <a href="/logout">logout</a><br/>
         General Manager: {{ restaurant.gm }}
@@ -18,7 +19,9 @@
             <input type="submit" value="set"/>
         </form>
 
+
     {% elif user.id == restaurant.gm_id %}
+<!--  ==================== GM ====================  -->
 
         <a href="/logout">logout</a><br/>
         Welcome, {{ user.name }}
@@ -41,14 +44,65 @@
                     requred autofocus />
             <input type="submit" value="add"/>
         </form>
+
+        <form action="/set_role_priority" method="POST">
+            <input type="hidden" name="restaurant_id" value="{{ restaurant.id }}">
+            <ul>
+                {% for preference in user_roles %}
+                    <li>
+                        <input type="number"
+                            name="{{ preference.id }}_gm_priority"
+                            value="{{ preference.gm_priority }}"
+                            min=1
+                            max=100
+                            step=1/>
+                        {{ preference.role.name }}
+                        {{ preference.user.name }}
+                    </li>
+                {% endfor %}
+            </ul>
+            <input type="submit" value="change role priority"/>
+        </form>
+
+
+    {% elif user and user_restaurant_roles %}
+<!--  ==================== Employee ====================  -->
+
+        <a href="/logout">logout</a><br/>
+        Welcome, {{ user.name }}.
+        <p>Please make sure these are ordered in your order of preference.</p>
+        {% if user_restaurant_roles %}
+        <form action="/set_role_priority" method="POST">
+            <input type="hidden" name="restaurant_id" value="{{ restaurant.id }}">
+            <ul>
+                {% for role in user_restaurant_roles %}
+                    <li>
+                        <input type="number"
+                            name="{{ role.id }}_priority"
+                            value="{{ role.priority }}"
+                            min=1
+                            max=100
+                            step=1/>
+                        {{ role.role.name }}
+                    </li>
+                {% endfor %}
+            </ul>
+            <input type="submit" value="change role priority"/>
+        </form>
+        {% endif %}
+
+
     {% elif user %}
+<!--  ==================== Logged non-employee ====================  -->
 
         <a href="/logout">logout</a><br/>
         Welcome, {{ user.name }}. You have been invited to join our team.
 
         Add user to restaurant
 
+
     {% else %}
+<!--  ==================== Not logged in ====================  -->
 
         Welcome, you have been invited to join the {{ restaurant.name }} family.
         <form action="/create_user" method="POST">
